embeded  three.js view by iframe

--- a/fusion learning.html
+++ b/fusion learning.html
@@ -29,6 +29,7 @@
 
                 <div class="sectionContent">
 
+
                     <article>
                         <div class="grid-container">
                             <div class="grid-item">
@@ -93,6 +94,10 @@
                             </div>
                         </div>
 
+                        <iframe src="https://a360.co/4cBssEc" width="640" height="480" allowfullscreen="true"
+                            webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0">
+
+                        </iframe>
                     </article>
 
                 </div>
