try fix error blocked by response

--- a/fusion learning.html
+++ b/fusion learning.html
@@ -94,10 +94,10 @@
                             </div>
                         </div>
 
-                        <iframe src="https://a360.co/4cBssEc" width="640" height="480" allowfullscreen="true"
-                            webkitallowfullscreen="true" mozallowfullscreen="true" frameborder="0">
-
-                        </iframe>
+                        <iframe
+                            src="https://gmail6152215.autodesk360.com/shares/public/SH28cd1QT2badd0ea72b98af84b12e96a81c?mode=embed"
+                            width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true"
+                            mozallowfullscreen="true" frameborder="0"></iframe>
                     </article>
 
                 </div>
