--- a/fusion learning.html
+++ b/fusion learning.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <title>Marian Sagat - Curriculum Vitae</title>
+    <title>Marian Sagat - Fusion Learning</title>
 
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="The Curriculum Vitae." />
+    <meta name="description" content="Fusion Learning Resources" />
     <meta charset="UTF-8">
 
     <link type="text/css" rel="stylesheet" href="style.css">
