--- a/fusion learning.html
+++ b/fusion learning.html
@@ -92,6 +92,11 @@
                                     <img src="Solids learning 4 img.png" alt="Fusion Model Preview">
                                 </a>
                             </div>
+                            <div class="grid-item">
+                                <a href="https://a360.co/3MPCyac">
+                                    <img src="knife_pic.png" alt="Fusion Model Preview">
+                                </a>
+                            </div>
                         </div>
 
                         <iframe
