--- a/fusion learning.html
+++ b/fusion learning.html
@@ -97,6 +97,11 @@
                                     <img src="knife_pic.png" alt="Fusion Model Preview">
                                 </a>
                             </div>
+                            <div class="grid-item">
+                                <a href="https://a360.co/4b7zKhW">
+                                    <img src="study cadcam 997 img.png" alt="Fusion Model Preview">
+                                </a>
+                            </div>
                         </div>
 
                         <iframe
