--- a/fusion learning.html
+++ b/fusion learning.html
@@ -102,6 +102,12 @@
                                     <img src="study cadcam 997 img.png" alt="Fusion Model Preview">
                                 </a>
                             </div>
+
+                            <div class="grid-item">
+                                <a href="https://a360.co/4rHmfeY">
+                                    <img src="study cad cam 1133 img.png" alt="Fusion Model Preview">
+                                </a>
+                            </div>
                         </div>
 
                         <iframe
