--- a/fusion learning.html
+++ b/fusion learning.html
@@ -108,6 +108,12 @@
                                     <img src="study cad cam 1133 img.png" alt="Fusion Model Preview">
                                 </a>
                             </div>
+
+                            <div class="grid-item">
+                                <a href="https://a360.co/4rE36KP">
+                                    <img src="study cadcam 1060 img.png" alt="Fusion Model Preview">
+                                </a>
+                            </div>
                         </div>
 
                         <iframe
