added spoon model

--- a/fusion learning.html
+++ b/fusion learning.html
@@ -114,6 +114,12 @@
                                     <img src="study cadcam 1060 img.png" alt="Fusion Model Preview">
                                 </a>
                             </div>
+
+                            <div class="grid-item">
+                                <a href="https://a360.co/4aVRk7j">
+                                    <img src="study cadcam 1029 img.png" alt="Fusion Model Preview">
+                                </a>
+                            </div>
                         </div>
 
                         <iframe
